[gd_scene load_steps=4 format=2]

[ext_resource path="res://Student/Man.tscn" type="PackedScene" id=1]
[ext_resource path="res://Student/player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[node name="Player" type="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 2 )
head = NodePath("head")
camera = NodePath("head/Camera")
network_tick_rate = NodePath("NetworkTickRate")
movement_tween = NodePath("MovementTween")

[node name="man" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.278544, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.0377749, 1.82892, 0 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.310108, 3, -0.072701 )

[node name="Camera" type="Camera" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.303986, 0.241197, 0 )

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.083
autostart = true

[node name="MovementTween" type="Tween" parent="."]

[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
